--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,4 +17,4 @@ jobs:
           target_branch: gh-pages
           build_dir: public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.LUSD_GITHUB_TOKEN }}
